--- a/exarea/View/Base.lproj/Main.storyboard
+++ b/exarea/View/Base.lproj/Main.storyboard
@@ -561,6 +561,7 @@
                                 <constraint firstAttribute="bottom" secondItem="zjc-eF-0Eq" secondAttribute="bottom" id="8s0-Qd-2HP"/>
                                 <constraint firstItem="tjo-WC-K5o" firstAttribute="centerY" secondItem="czv-mu-wm4" secondAttribute="centerY" id="Mjm-on-CVx"/>
                                 <constraint firstItem="0tY-pg-PwB" firstAttribute="top" secondItem="tjo-WC-K5o" secondAttribute="top" id="NEI-jV-JAR"/>
+                                <constraint firstItem="0tY-pg-PwB" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="czv-mu-wm4" secondAttribute="leading" constant="10" id="O9S-pw-PvN"/>
                                 <constraint firstAttribute="trailing" secondItem="tjo-WC-K5o" secondAttribute="trailing" constant="10" id="QYs-9A-bQW"/>
                                 <constraint firstAttribute="trailing" secondItem="zjc-eF-0Eq" secondAttribute="trailing" id="byP-K3-UhS"/>
                                 <constraint firstItem="0tY-pg-PwB" firstAttribute="bottom" secondItem="tjo-WC-K5o" secondAttribute="bottom" id="eha-WE-Eho"/>
@@ -568,6 +569,11 @@
                                 <constraint firstItem="tjo-WC-K5o" firstAttribute="height" secondItem="czv-mu-wm4" secondAttribute="height" multiplier="0.8" id="lEj-qv-Czh"/>
                                 <constraint firstItem="zjc-eF-0Eq" firstAttribute="leading" secondItem="czv-mu-wm4" secondAttribute="leading" id="udp-d7-ONc"/>
                             </constraints>
+                        </view>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="9WR-QE-lLD">
+                            <rect key="frame" x="0.0" y="256" width="375" height="44"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
                         <sections>
                             <tableViewSection id="dLV-ul-zFs">
@@ -681,7 +687,7 @@
         <!--درباره ما-->
         <scene sceneID="8E4-0c-Bmv">
             <objects>
-                <viewController storyboardIdentifier="AboutUsVC" title="درباره ما" id="ge7-Cf-IEY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AboutUsVC" title="درباره ما" id="ge7-Cf-IEY" customClass="AboutUsViewController" customModule="exarea" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3Kw-u9-zJ2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -690,22 +696,20 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Exarea" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bj5-Bm-lLB">
-                                        <rect key="frame" x="181.5" y="167" width="82.5" height="39"/>
+                                        <rect key="frame" x="214.5" y="167" width="82.5" height="39"/>
                                         <fontDescription key="fontDescription" name="SegoeUI" family="Segoe UI" pointSize="29"/>
                                         <color key="textColor" red="0.99215686270000003" green="0.83137254900000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="آشنایی با" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IL9-gQ-UMj">
-                                        <rect key="frame" x="274" y="177" width="83" height="29"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="درباره" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IL9-gQ-UMj">
+                                        <rect key="frame" x="307" y="177" width="50" height="29"/>
                                         <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobileFaNum" pointSize="23"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xms-7O-Auk">
-                                        <rect key="frame" x="18" y="216" width="339" height="343"/>
-                                        <string key="text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
-                                        <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobileFaNum" pointSize="17"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="درباره" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xms-7O-Auk">
+                                        <rect key="frame" x="18" y="216" width="339" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image3.jpeg" translatesAutoresizingMaskIntoConstraints="NO" id="JvV-D7-gIJ">
@@ -738,6 +742,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="w91-gd-uVo"/>
                     </view>
+                    <connections>
+                        <outlet property="labelAbout" destination="Xms-7O-Auk" id="PFj-Vq-sFt"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pW4-js-IiH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -1330,11 +1337,10 @@
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pr8-xV-7BF">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="568"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fuy-cI-FKD">
-                                                <rect key="frame" x="10" y="20" width="355" height="664.5"/>
-                                                <string key="text">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.</string>
-                                                <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobileFaNum" pointSize="17"/>
-                                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="قوانین" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fuy-cI-FKD">
+                                                <rect key="frame" x="10" y="20" width="355" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -1374,6 +1380,7 @@
                         <viewLayoutGuide key="safeArea" id="YV0-j5-VuA"/>
                     </view>
                     <connections>
+                        <outlet property="labelRules" destination="Fuy-cI-FKD" id="NXb-Q6-rww"/>
                         <outlet property="scrollViewContainer" destination="w8o-4v-CHI" id="hTQ-ak-ntJ"/>
                     </connections>
                 </viewController>
@@ -1468,7 +1475,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="P9A-a4-cgG">
-                                <rect key="frame" x="0.0" y="64" width="375" height="482.5"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="470"/>
                                 <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="sectionIndexBackgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
@@ -1607,20 +1614,20 @@
                                 </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c1G-mh-EPz" customClass="ShadowedView" customModule="exarea" customModuleProvider="target">
-                                <rect key="frame" x="5" y="551.5" width="365" height="61.5"/>
+                                <rect key="frame" x="5" y="539" width="365" height="74"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bmE-fM-CK1">
-                                        <rect key="frame" x="0.0" y="0.0" width="365" height="61.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="365" height="74"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Ic2-BI-kGw">
-                                        <rect key="frame" x="10" y="10" width="345" height="41.5"/>
+                                        <rect key="frame" x="10" y="10" width="345" height="54"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="P8C-Zy-soY">
-                                                <rect key="frame" x="0.0" y="0.0" width="297" height="41.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="297" height="54"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="RO6-hv-iZW" customClass="GrowingTextView" customModule="GrowingTextView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="297" height="37.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="297" height="50"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" name="IRANSansMobileFaNum" family="IRANSansMobile(FaNum)" pointSize="17"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -1635,7 +1642,7 @@
                                                         </connections>
                                                     </textView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSa-3B-lPP">
-                                                        <rect key="frame" x="0.0" y="40.5" width="297" height="1"/>
+                                                        <rect key="frame" x="0.0" y="53" width="297" height="1"/>
                                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="1" id="CaL-hP-W6e"/>
@@ -1644,7 +1651,7 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uEJ-EP-WTn">
-                                                <rect key="frame" x="305" y="1" width="40" height="40"/>
+                                                <rect key="frame" x="305" y="7" width="40" height="40"/>
                                                 <color key="backgroundColor" red="0.1019607843" green="0.12549019610000001" blue="0.20784313730000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" id="2Az-4t-mEN"/>
